--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,112 @@
-html,
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap");
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	margin: 0;
+	background: #f2f2f2;
+	color: #333;
+	font-family: "Nunito";
 }
-
 a {
-  color: inherit;
-  text-decoration: none;
+	color: #333;
+	text-decoration: none;
+}
+.container {
+	max-width: 1000px;
+	margin: 0 auto;
 }
 
-* {
-  box-sizing: border-box;
+.content {
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 10px;
+}
+
+nav {
+	margin: 0px 10px;
+	padding: 0px 10px;
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-end;
+	border-bottom: 1px solid #ddd;
+	/* sticky nav bar - dont forget to set body margin 0px in root css*/
+	position: sticky;
+	top: 0;
+	background: #f2f2f2;
+	/* z-index: 999; */
+
+	box-shadow: 0px 10px 10px 10px #f2f2f2;
+}
+nav a {
+	margin-left: 12px;
+	padding-bottom: 5px;
+	font-size: 0.9rem;
+	font-weight: 600;
+}
+nav .logo {
+	margin-right: auto;
+	padding-top: 10px;
+}
+footer {
+	display: block;
+	text-align: center;
+	padding: 30px 0;
+	margin-top: 60px;
+	color: #777;
+	border-top: 1px solid #eaeaea;
+}
+
+ul {
+	color: #555;
+}
+
+li {
+	width: 100px;
+	color: #555;
+}
+
+.list {
+	display: flex;
+	align-items: center;
+
+	justify-content: space-evenly;
+}
+
+h1 {
+	text-align: center;
+	color: #222;
+	margin: 5px;
+	padding: 5px;
+}
+
+h3 {
+	color: #444;
+	margin: 5px;
+	padding: 5px;
+	padding-left: 10px;
+}
+
+p {
+	margin: 5px;
+	padding: 5px;
+	color: #555;
+}
+
+.not-found {
+	margin: 200px auto;
+	text-align: center;
+}
+.not-found a {
+	color: #4979ff;
+	text-decoration: underline;
+}
+
+.btn {
+	display: block;
+	width: 150px;
+	padding: 8px 0;
+	margin: 20px auto;
+	background: #4979ff;
+	border-radius: 4px;
+	color: white;
+	text-align: center;
 }
